--- a/playbook1.yml
+++ b/playbook1.yml
@@ -6,3 +6,18 @@
     name: "Configure Apache Server"
     roles:
         - httpd
+        
+-
+    name: "Configure Jenkins VM"
+    hosts: jenkins
+    become: true
+    roles:
+        - java
+        - jenkins
+
+-
+    name: "Configure Jump Box"
+    hosts: jump
+    become: true
+    roles:
+        - jump
